[package]
name = "RustBitcoinPuzzle"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = "0.32.8"
log = "0.4.27"
log4rs = "1.3.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
rand = "0.8.5"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
hex = "0.4.3"

[profile.release]
opt-level = 3
lto = true        # Link Time Optimization (Clave para inline de funciones criptográficas)
codegen-units = 1 # Hace la compilación más lenta pero el código resultante más rápido
panic = 'abort'
debug = false